# F1-project

./: CMakeLists.txt  README.md  car.h  driver.h  f1_championship.c  f1_championship.h  main.c  preprocess.h  time.c  time.h  track.c  track.h  tracks.csv  utils.h  weekend.c
F1-project-main/: CMakeLists.txt  Contenu.md  car.h  f1_championship.c  f1_championship.h  main.c  preprocess.h  time.c  time.h
data/: drivers.csv  drivers.txt  tracks.csv  tracks.txt
include/: championship.h  driver.h  drivers.h  practices.h  quali.h  race.h  races.h  season.h  track.h  tracks.h  utils.h  weekend.h  weekends.h
src/: championship.c  driver.c  drivers.c  main.c  practices.c  quali.c  race.c  races.c  season.c  track.c  tracks.c  utils.c  weekends.c
wiki/: README.md
